# html-cleaver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: html_cleaver_CI.yml  html_cleaver_CI_poetry.yml
src/html_cleaver/: cleaver.py  handle.py
src/test/: test1basic.html  test2flat.html  test3semantic.html  test4deep.html  test5fail.html  test6illformed.html  test7javascript.html  test8suppress.html  test_cleaver.py  test_cleaver_integration.py
