[tool.poetry]
name = "html-cleaver"
version = "0.2.0"
description = "cleave html text with relevant headers"
license = "MIT"
authors = [
	"Presidio Vantage <presidiovantage@github.com>",
	"Martin Zirulnik <mziru@github.com>",
]
readme = "README.md"
repository = "https://github.com/PresidioVantage/html-cleaver"
keywords = ["xml", "html"]
packages = [
	{include = "html_cleaver", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.3"
selenium = {version="^4.15.2", optional=true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
